--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,12 @@ img {
   color: #075e54;
 }
 
+#license {
+  width: 100%;
+  margin: 1em auto;
+  text-align: center;
+}
+
 .btnopen {
   width: 160px;
   margin: 1em auto;
